--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -15,7 +15,18 @@
     <title>BoolzappWeb</title>
 </head>
 
-<body>
+<body class="py-3">
+    <!-- barra verde superiore -->
+    <div class="bg-green-bar"></div>
+
+    <!-- main container -->
+    <section class="container main-container">
+        <h1>hello</h1>
+    </section>
+
+
+
+    <!-- script JS -->
     <script src="js/script.js"></script>
 </body>
 
