--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -20,8 +20,12 @@
     <div class="bg-green-bar"></div>
 
     <!-- main container -->
-    <section class="container main-container">
-        <h1>hello</h1>
+    <section class="container my-container">
+        <div class="row h-100">
+            <div class="col-4 orange-bg">hi</div>
+
+            <div class="col-8 purple-bg">hi</div>
+        </div>
     </section>
 
 
