--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -22,12 +22,34 @@
     <!-- main container -->
     <section class="container my-container">
         <div class="row h-100">
-            <div class="col-4 orange-bg">hi</div>
+            <!-- Colonna sinistra -->
+            <div class="col-4 orange-bg d-flex flex-column  my-row-padding">
+
+                <div class="my-element d-flex align-items-center p-2">
+                    <img src="img/avatar_2.jpg" alt="user-img" class="rounded-circle my-w-12">
+                    <span class="flex-grow-1 fw-bold ps-2">Nome Utente</span>
+                    <span class="justify-self-end fs-4 nav-icons">
+                        <i class="fas fa-circle-notch "></i>
+                        <i class="fas fa-comment-alt px-2"></i>
+                        <i class="fas fa-ellipsis-v px-2"></i>
+                    </span>
+                </div>
+
+                <div class="my-element blue-bg d-flex align-items-center p-3">
+                    <div class="circle d-flex justify-content-center align-items-center">
+                        <i class="fas fa-bell-slash fs-4 my-blue"></i>
+                    </div>
+                    <div></div>
+                </div>
+
+
+                <div></div>
+                <div></div>
+            </div>
 
             <div class="col-8 purple-bg">hi</div>
         </div>
     </section>
-
 
 
     <!-- script JS -->
