--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -25,7 +25,7 @@
             <!-- Colonna sinistra -->
             <div class="col-4 orange-bg d-flex flex-column  my-row-padding">
 
-                <div class="my-element d-flex align-items-center p-2">
+                <div class="my-element d-flex align-items-center p-2 my-flex-shrink ">
                     <img src="img/avatar_2.jpg" alt="user-img" class="rounded-circle my-w-12">
                     <span class="flex-grow-1 fw-bold ps-2">Nome Utente</span>
                     <span class="justify-self-end fs-4 nav-icons">
@@ -35,16 +35,38 @@
                     </span>
                 </div>
 
-                <div class="my-element blue-bg d-flex align-items-center p-3">
+                <div class="my-element blue-bg d-flex align-items-center p-3 my-flex-shrink ">
                     <div class="circle d-flex justify-content-center align-items-center">
                         <i class="fas fa-bell-slash fs-4 my-blue"></i>
                     </div>
-                    <div></div>
+                    <div class="ms-3">
+                        <p class="fw-bold my-p-margin">Ricevi notifiche di nuovi messaggi</p>
+                        <a class="my-p-margin link-notifiche" href="#">Attiva notifiche desktop</a>
+                    </div>
                 </div>
 
 
-                <div></div>
-                <div></div>
+                <div class="p-2 input-container d-flex my-flex-shrink ">
+                    <button type="button" class="btn btn-outline-secondary"><i class="fas fa-search fs-5"></i></button>
+                    <input class="form-control me-2" type="search" placeholder="Cerca o inizia una nuova chat"
+                        aria-label="Search">
+                </div>
+
+
+                <div class="contact-container flex-grow-1 overflow-auto my-3 me-3 border-end">
+                    <div class="border-top p-2">
+                        <img src="img/avatar_1.jpg" alt="user-img" class="rounded-circle my-w-12">
+                    </div>
+                    <div class="border-top p-2">
+                        <img src="img/avatar_io.jpg" alt="user-img" class="rounded-circle my-w-12">
+                    </div>
+                    <div class="border-top p-2">
+                        <img src="img/avatar_6.jpg" alt="user-img" class="rounded-circle my-w-12">
+                    </div>
+                    <div class="border-top p-2">
+                        <img src="img/avatar_5.jpg" alt="user-img" class="rounded-circle my-w-12">
+                    </div>
+                </div>
             </div>
 
             <div class="col-8 purple-bg">hi</div>
