--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -23,7 +23,7 @@
     <section class="container my-container">
         <div class="row h-100">
             <!-- Colonna sinistra -->
-            <div class="col-4 orange-bg d-flex flex-column  my-row-padding">
+            <div class="col-4 orange-bg d-flex flex-column  my-row-padding h-100">
 
                 <div class="my-element d-flex align-items-center p-2 my-flex-shrink ">
                     <img src="img/avatar_2.jpg" alt="user-img" class="rounded-circle my-w-12">
@@ -53,23 +53,62 @@
                 </div>
 
 
-                <div class="contact-container flex-grow-1 overflow-auto my-3 me-3 border-end">
-                    <div class="border-top p-2">
-                        <img src="img/avatar_1.jpg" alt="user-img" class="rounded-circle my-w-12">
+                <div class="contact-container flex-grow-1 my-3 me-3 border-end">
+
+                    <div class="border-top p-2 d-flex">
+                        <img src="img/avatar_1.jpg" alt="user-img" class="rounded-circle my-w-20">
+                        <div class="ms-3 w-75">
+                            <div class="d-flex justify-content-between">
+                                <h5>Michele</h5>
+                                <p>10/01/2020 16:15:22</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="border-top p-2">
-                        <img src="img/avatar_io.jpg" alt="user-img" class="rounded-circle my-w-12">
+
+                    <div class="border-top p-2 d-flex">
+                        <img src="img/avatar_io.jpg" alt="user-img" class="rounded-circle my-w-20">
+                        <div class="ms-3 w-75">
+                            <div class="d-flex justify-content-between">
+                                <h5>Giulia</h5>
+                                <p>10/01/2020 16:15:22</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="border-top p-2">
-                        <img src="img/avatar_6.jpg" alt="user-img" class="rounded-circle my-w-12">
+
+                    <div class="border-top p-2 d-flex">
+                        <img src="img/avatar_6.jpg" alt="user-img" class="rounded-circle my-w-20">
+                        <div class="ms-3 w-75">
+                            <div class="d-flex justify-content-between">
+                                <h5>Sara</h5>
+                                <p>10/01/2020 16:15:22</p>
+                            </div>
+                        </div>
                     </div>
-                    <div class="border-top p-2">
-                        <img src="img/avatar_5.jpg" alt="user-img" class="rounded-circle my-w-12">
+
+                    <div class="border-top p-2 d-flex">
+                        <img src="img/avatar_5.jpg" alt="user-img" class="rounded-circle my-w-20">
+                        <div class="ms-3 w-75">
+                            <div class="d-flex justify-content-between">
+                                <h5>Daniele</h5>
+                                <p>10/01/2020 16:15:22</p>
+                            </div>
+                        </div>
                     </div>
+
                 </div>
             </div>
 
-            <div class="col-8 purple-bg">hi</div>
+            <div class="col-8 img-bg my-row-padding border-start">
+                <div class="my-element d-flex align-items-center p-2">
+
+                    <span class="flex-grow-1 fw-bold ps-2">Nome Utente</span>
+                    <span class="justify-self-end fs-4 nav-icons">
+                        <i class="fas fa-search"></i>
+                        <i class="fas fa-paperclip"></i>
+                        <i class="fas fa-ellipsis-v px-2"></i>
+                    </span>
+                </div>
+            </div>
         </div>
     </section>
 
