--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -107,7 +107,7 @@
             <!-- Colonna destra -->
             <div class="col-8 d-flex flex-column my-row-padding border-start">
 
-                <!-- Nav -->
+                <!-- Nav top-->
                 <div class="my-element d-flex align-items-center p-2 my-flex-shrink w-100">
                     <div class="my-w-15">
                         <img src="img/avatar_1.jpg" alt="user-img" class="rounded-circle img-user">
@@ -131,10 +131,22 @@
 
                 <div class="img-bg flex-grow-1 me-3"></div>
 
-                <div class="send-message-nav my-flex-shrink">
 
+                <!-- Inviare Messaggio -->
+                <div class="send-message-nav d-flex my-flex-shrink align-items-center">
+                    <div class="my-w-12 d-flex justify-content-center align-items-center"><i
+                            class="far fa-smile fs-3 nav-icons"></i>
+                    </div>
+                    <div class="flex-grow-1">
+                        <input type="text" class="form-control" placeholder="Messaggio" aria-label="Username"
+                            aria-describedby="basic-addon1" style="height: 50px;">
+                    </div>
+                    <div class="my-w-12 d-flex justify-content-center align-items-center"><i
+                            class="fas fa-microphone fs-3 nav-icons"></i></div>
                 </div>
+
             </div>
+        </div>
 
 
         </div>
