--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -129,7 +129,26 @@
                     </div>
                 </div>
 
-                <div class="img-bg flex-grow-1 me-3"></div>
+
+                <!-- BOX MESSAGGI -->
+                <div class="img-bg d-flex flex-column flex-grow-1 py-3 px-5 me-3">
+
+                    <div class="message-sent rounded-3 mb-2 p-2">
+                        <p class="my-p-margin">Hai portato a spasso il cane?</p>
+                        <p class="fs-6 message-time my-p-margin">10/01/2020 15:30:55</p>
+                    </div>
+
+                    <div class="message-sent rounded-3 mb-2 p-2">
+                        <p class="my-p-margin">Ricordati di farlo mangiare!</p>
+                        <p class="fs-6 message-time my-p-margin">10/01/2020 15:30:55</p>
+                    </div>
+
+                    <div class="message-received rounded-3 mb-2 p-2">
+                        <p class="my-p-margin">Tutto fatto!</p>
+                        <p class="fs-6 message-time my-p-margin">10/01/2020 15:30:55</p>
+                    </div>
+
+                </div>
 
 
                 <!-- Inviare Messaggio -->
