--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -105,7 +105,7 @@
             </div>
 
             <!-- Colonna destra -->
-            <div class="col-8 d-flex flex-column my-row-padding border-start">
+            <div class="col-8 d-flex flex-column my-row-padding border-start h-100">
 
                 <!-- Nav top-->
                 <div class="my-element d-flex align-items-center p-2 my-flex-shrink w-100">
