--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -157,7 +157,7 @@
                             class="far fa-smile fs-3 nav-icons"></i>
                     </div>
                     <div class="flex-grow-1">
-                        <input type="text" class="form-control" placeholder="Messaggio" aria-label="Username"
+                        <input type="text" class="form-control" placeholder="Scrivi un messaggio" aria-label="Username"
                             aria-describedby="basic-addon1" style="height: 50px;">
                     </div>
                     <div class="my-w-12 d-flex justify-content-center align-items-center"><i
