--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -20,7 +20,7 @@
     <div class="bg-green-bar"></div>
 
     <!-- main container -->
-    <section class="container my-container">
+    <section class="container my-container" id="root">
         <div class="row h-100">
 
             <!-- Colonna sinistra -->
