--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -153,15 +153,23 @@
 
                 <!-- Inviare Messaggio -->
                 <div class="send-message-nav d-flex my-flex-shrink align-items-center">
+
                     <div class="my-w-12 d-flex justify-content-center align-items-center"><i
                             class="far fa-smile fs-3 nav-icons"></i>
                     </div>
+
                     <div class="flex-grow-1">
                         <input type="text" class="form-control" placeholder="Scrivi un messaggio" aria-label="Username"
                             aria-describedby="basic-addon1" style="height: 50px;">
                     </div>
-                    <div class="my-w-12 d-flex justify-content-center align-items-center"><i
-                            class="fas fa-microphone fs-3 nav-icons"></i></div>
+
+                    <div class="my-w-12 d-flex justify-content-center align-items-center circle-green mx-2">
+                        <i class="fas fa-paper-plane fs-5" style="color: white;"></i>
+                    </div>
+
+                    <div class="my-w-12 d-flex justify-content-center align-items-center">
+                        <i class="fas fa-microphone fs-3 nav-icons"></i>
+                    </div>
                 </div>
 
             </div>
