--- a/milestone1/index.html
+++ b/milestone1/index.html
@@ -131,14 +131,15 @@
 
 
                 <!-- BOX MESSAGGI -->
-                <div class="img-bg d-flex flex-column flex-grow-1 py-3 px-5 me-3">
+                <div class="img-bg d-flex flex-column flex-grow-1 py-3 px-5 me-3" v-for="singleChat in chat">
 
-                    <div class="message-sent rounded-3 mb-2 p-2">
-                        <p class="my-p-margin">Hai portato a spasso il cane?</p>
-                        <p class="fs-6 message-time my-p-margin">10/01/2020 15:30:55</p>
+                    <div class="rounded-3 mb-2 p-2" v-for="singleMessage in singleChat.messages"
+                        :class="singleMessage.status == `sent` ? 'message-sent' : 'message-received'">
+                        <p class="my-p-margin">{{singleMessage.text}}</p>
+                        <p class="fs-6 message-time my-p-margin">{{singleMessage.timestamp}}</p>
                     </div>
 
-                    <div class="message-sent rounded-3 mb-2 p-2">
+                    <!-- <div class="message-sent rounded-3 mb-2 p-2">
                         <p class="my-p-margin">Ricordati di farlo mangiare!</p>
                         <p class="fs-6 message-time my-p-margin">10/01/2020 15:30:55</p>
                     </div>
@@ -146,7 +147,7 @@
                     <div class="message-received rounded-3 mb-2 p-2">
                         <p class="my-p-margin">Tutto fatto!</p>
                         <p class="fs-6 message-time my-p-margin">10/01/2020 15:30:55</p>
-                    </div>
+                    </div> -->
 
                 </div>
 
