--- a/milestone2/index.html
+++ b/milestone2/index.html
@@ -72,7 +72,7 @@
                                     <small class="nav-icons">{{ ultimoMessaggio(friend.messages) }}</small>
                                 </div>
 
-                                <p>10/01/2020 16:15:22</p>
+                                <p class="nav-icons">10/01/2020 16:15:22</p>
                             </div>
                         </div>
                     </div>
