--- a/milestone2/index.html
+++ b/milestone2/index.html
@@ -93,7 +93,7 @@
                         <div class="ms-3 w-75">
                             <div class="d-flex flex-column">
                                 <h5>{{active.name}}</h5>
-                                <span>Ultimo accesso {{ ultimoAccesso(active.messages) }}</span>
+                                <span>Ultimo accesso {{ myUltimoAccesso }}</span>
                             </div>
                         </div>
                     </div>
