--- a/milestone2/index.html
+++ b/milestone2/index.html
@@ -52,14 +52,14 @@
                     </div>
                 </div>
 
-
+                <!-- input ricerca -->
                 <div class="p-2 input-container d-flex my-flex-shrink ">
                     <button type="button" class="btn btn-outline-secondary"><i class="fas fa-search fs-5"></i></button>
                     <input class="form-control me-2" type="search" placeholder="Cerca o inizia una nuova chat"
                         aria-label="Search">
                 </div>
 
-
+                <!-- contenitore contatti -->
                 <div class="contact-container flex-grow-1 my-3 me-3 border-end">
 
                     <div class="border-top p-2 d-flex align-items-center" v-for="friend in chat"
