--- a/milestone2/index.html
+++ b/milestone2/index.html
@@ -56,13 +56,13 @@
                 <div class="p-2 input-container d-flex my-flex-shrink ">
                     <button type="button" class="btn btn-outline-secondary"><i class="fas fa-search fs-5"></i></button>
                     <input class="form-control me-2" type="search" placeholder="Cerca o inizia una nuova chat"
-                        aria-label="Search">
+                        aria-label="Search" v-model="myFilter">
                 </div>
 
                 <!-- contenitore contatti -->
                 <div class="contact-container flex-grow-1 my-3 me-3 border-end">
 
-                    <div class="border-top p-2 d-flex align-items-center" v-for="friend in chat"
+                    <div class="border-top p-2 d-flex align-items-center" v-for="friend in filterChat()"
                         @click="attivaChat(friend)">
                         <img :src="friend.avatar" :alt="friend.name" class="rounded-circle img-avatar-height ">
                         <div class="ms-3 w-100">
