--- a/milestone2/index.html
+++ b/milestone2/index.html
@@ -54,8 +54,9 @@
 
                 <!-- input ricerca -->
                 <div class="p-2 input-container d-flex my-flex-shrink ">
-                    <button type="button" class="btn btn-outline-secondary"><i class="fas fa-search fs-5"></i></button>
-                    <input class="form-control me-2" type="search" placeholder="Cerca o inizia una nuova chat"
+                    <button type="button" class="btn my-lens-btn border border-end-0"><i
+                            class="fas fa-search fs-5"></i></button>
+                    <input class="form-control me-2 input-btn" type="search" placeholder="Cerca o inizia una nuova chat"
                         aria-label="Search" v-model="myFilter">
                 </div>
 
