--- a/milestone2/index.html
+++ b/milestone2/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/style.css">
 
     <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <script src="https://unpkg.com/dayjs@1.8.21/dayjs.min.js"></script>
 
     <title>BoolzappWeb</title>
 </head>
