--- a/milestone2/index.html
+++ b/milestone2/index.html
@@ -111,10 +111,22 @@
                 <!-- BOX MESSAGGI -->
                 <div class="img-bg d-flex flex-column flex-grow-1 py-3 px-5 me-3">
 
-                    <div class="rounded-3 mb-2 p-2" v-for="singleMessage in active.messages"
+                    <div class="rounded-3 mb-2 pt-2 pb-4 ps-2 pe-4 dropContainer"
+                        v-for="singleMessage in active.messages"
                         :class="singleMessage.status == `sent` ? 'message-sent' : 'message-received'">
                         <p class="my-p-margin">{{singleMessage.text}}</p>
-                        <p class="fs-6 message-time my-p-margin">{{singleMessage.timestamp}}</p>
+                        <p class="fs-6 message-time my-p-margin time-absolute">{{singleMessage.timestamp}}</p>
+
+                        <div class="dropdown mydrop">
+                            <button class="btn nav-icons" style="color: rgb(177, 177, 177);" type="button"
+                                id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                <i class="fas fa-ellipsis-v px-2"></i>
+                            </button>
+                            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                                <li><a class="dropdown-item" href="#">Informazioni</a></li>
+                                <li><a class="dropdown-item" href="#">Cancella</a></li>
+                            </ul>
+                        </div>
                     </div>
 
                 </div>
@@ -153,6 +165,10 @@
 
     <!-- script JS -->
     <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
 </body>
 
 </html>
