--- a/milestone2/index.html
+++ b/milestone2/index.html
@@ -112,21 +112,25 @@
                 <div class="img-bg d-flex flex-column flex-grow-1 py-3 px-5 me-3">
 
                     <div class="rounded-3 mb-2 pt-2 pb-4 ps-2 pe-4 dropContainer"
-                        v-for="singleMessage in active.messages"
+                        v-for="(singleMessage, i) in active.messages"
                         :class="singleMessage.status == `sent` ? 'message-sent' : 'message-received'">
                         <p class="my-p-margin">{{singleMessage.text}}</p>
                         <p class="fs-6 message-time my-p-margin time-absolute">{{singleMessage.timestamp}}</p>
 
                         <div class="dropdown mydrop">
-                            <button class="btn nav-icons" style="color: rgb(177, 177, 177);" type="button"
+                            <button class="btn nav-icons myBtnPadding" style="color: rgb(177, 177, 177);" type="button"
                                 id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                                <i class="fas fa-ellipsis-v px-2"></i>
+                                <i class="fas fa-ellipsis-v"></i>
                             </button>
                             <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                                 <li><a class="dropdown-item" href="#">Informazioni</a></li>
-                                <li><a class="dropdown-item" href="#">Cancella</a></li>
+                                <li><a class="dropdown-item" href="#" @click="deleteMessage(i)">Cancella</a></li>
                             </ul>
                         </div>
+                    </div>
+
+                    <div class="empty" v-if="active.messages.length === 0">
+                        <h3>Inizia una conversazione con {{active.name}}</h3>
                     </div>
 
                 </div>
