--- a/milestone2/index.html
+++ b/milestone2/index.html
@@ -71,7 +71,8 @@
                             <div class="d-flex justify-content-between">
                                 <div class="mt-2">
                                     <h5 class="my-p-margin">{{friend.name}}</h5>
-                                    <small class="nav-icons">{{ ultimoMessaggio(friend.messages) }}</small>
+                                    <small class="nav-icons">{{ anteprimaChat(ultimoMessaggio(friend.messages))
+                                        }}</small>
                                 </div>
 
                                 <p class="nav-icons">{{ultimoAccesso(friend.messages)}}</p>
