--- a/milestone2/index.html
+++ b/milestone2/index.html
@@ -130,7 +130,7 @@
                         </div>
                     </div>
 
-                    <div class="empty" v-if="active.messages.length === 0">
+                    <div class="empty text-center mt-5" v-if="active.messages.length === 0">
                         <h3>Inizia una conversazione con {{active.name}}</h3>
                     </div>
 
