--- a/milestone2/index.html
+++ b/milestone2/index.html
@@ -115,7 +115,7 @@
                     <div class="rounded-3 mb-2 pt-2 pb-4 ps-2 pe-4 dropContainer"
                         v-for="(singleMessage, i) in active.messages"
                         :class="singleMessage.status == `sent` ? 'message-sent' : 'message-received'">
-                        <p class="my-p-margin">{{singleMessage.text}}</p>
+                        <p class="my-p-margin mb-2">{{singleMessage.text}}</p>
                         <p class="fs-6 message-time my-p-margin time-absolute">{{singleMessage.timestamp}}</p>
 
                         <div class="dropdown mydrop">
@@ -152,7 +152,7 @@
 
                     <div class="my-w-12 d-flex justify-content-center align-items-center circle-green mx-2"
                         @click="pushNuovoMessaggio">
-                        <i class="fas fa-paper-plane fs-5" style="color: white;"></i>
+                        <i class="fas fa-paper-plane center-paper-icon fs-5" style="color: white;"></i>
                     </div>
 
                     <div class="my-w-12 d-flex justify-content-center align-items-center">
