--- a/milestone2/index.html
+++ b/milestone2/index.html
@@ -33,7 +33,7 @@
                         <img src="img/avatar_2.jpg" alt="user-img" class="rounded-circle img-user">
                     </div>
                     <div class="flex-grow-1">
-                        <span class="fw-bold ps-2">Nome Utente</span>
+                        <span class="fw-bold ps-2">Riccardo Grasso</span>
                     </div>
 
                     <div class="justify-self-end fs-4 nav-icons">
