--- a/milestone2/index.html
+++ b/milestone2/index.html
@@ -95,7 +95,7 @@
                     <div class="flex-grow-1 h-100">
                         <div class="ms-3 w-75">
                             <div class="d-flex flex-column">
-                                <h5>{{active.name}}</h5>
+                                <h5 class="my-h5-margin">{{active.name}}</h5>
                                 <span>Ultimo accesso {{ myUltimoAccesso }}</span>
                             </div>
                         </div>
